# jinshu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
conf/: all.toml  app.toml  authorizer.toml  client.toml  comet.toml  database.toml  distributor.toml  etcd.toml  gateway.toml  kafka.toml  pulsar.toml  pusher.toml  receiver.toml  redis.toml  tracing.toml
jinshu-admin/: Cargo.toml  README.md
jinshu-api/: Cargo.toml  README.md
jinshu-authorizer/: Cargo.toml  Dockerfile  README.md
jinshu-authorizer/src/: authorizer.rs  config.rs  lib.rs  main.rs
jinshu-comet/: Cargo.toml  Dockerfile  README.md
jinshu-comet/src/: comet.rs  config.rs  connection.rs  lib.rs  main.rs
jinshu-common/: Cargo.toml  README.md
jinshu-common/src/: conf.rs  error.rs  lib.rs
jinshu-database/: Cargo.toml  README.md
jinshu-database/src/: config.rs  lib.rs
jinshu-database/src/model/: app_user.rs  block.rs  friend.rs  group.rs  group_member.rs  message.rs  mod.rs  prelude.rs  user.rs
jinshu-file/: Cargo.toml  README.md
jinshu-gateway/: Cargo.toml  Dockerfile  README.md
jinshu-gateway/examples/: Dockerfile  app_server.rs
jinshu-gateway/examples/model/: app_user.rs  mod.rs  prelude.rs
jinshu-gateway/src/: api.rs  config.rs  lib.rs  main.rs
jinshu-protocol/: Cargo.toml  README.md
jinshu-protocol/src/: error.rs  lib.rs  protocol.rs
jinshu-pusher/: Cargo.toml  Dockerfile  README.md
jinshu-pusher/src/: config.rs  lib.rs  main.rs  pusher.rs
jinshu-queue/: Cargo.toml  README.md
jinshu-queue/src/: config.rs  error.rs  kafka.rs  lib.rs  pulsar.rs
jinshu-queue/src/kafka/: config.rs  consumer.rs  error.rs
jinshu-queue/src/pulsar/: config.rs  consumer.rs  error.rs
jinshu-receiver/: Cargo.toml  Dockerfile  README.md
jinshu-receiver/src/: config.rs  kafka.rs  lib.rs  main.rs  pulsar.rs
jinshu-redis/: Cargo.toml  README.md
jinshu-redis/src/: config.rs  error.rs  lib.rs  session.rs
jinshu-rpc/: Cargo.toml  README.md  build.rs
jinshu-rpc/proto/: authorizer.proto  comet.proto  receiver.proto  test.proto
jinshu-rpc/proto/domain/: message.proto
jinshu-rpc/src/: config.rs  lib.rs  protocol.rs  registry.rs  status.rs
jinshu-rpc/src/registry/: etcd.rs  mock.rs
jinshu-sdk/: Cargo.toml  README.md
jinshu-sdk/examples/: Dockerfile  app_client.rs
jinshu-sdk/src/: cli.rs  client.rs  error.rs  lib.rs
jinshu-storage/: Cargo.toml  Dockerfile  README.md
jinshu-storage/src/: lib.rs  main.rs  storage.rs
jinshu-timer/: Cargo.toml  README.md
jinshu-tracing/: Cargo.toml  README.md
jinshu-tracing/src/: config.rs  error.rs  lib.rs
jinshu-utils/: Cargo.toml  README.md
jinshu-utils/src/: error.rs  lib.rs  secret.rs
script/: create_table.sql
