[package]
name = "jinshu-comet"
version = "0.1.0"
authors = ["Geng Teng <me@gteng.org>"]
description = "Instant Messaging System"
homepage = "https://jinshu.io"
readme = "README.md"
keywords = ["instant messaging"]
license = "MIT"
repository = "https://github.com/gengteng/jinshu"
edition = "2021"

[dependencies]
bytes = "1.1"
jinshu-utils = { path = "../jinshu-utils" }
jinshu-protocol = { path = "../jinshu-protocol" }
jinshu-common = { path = "../jinshu-common" }
jinshu-redis = { path = "../jinshu-redis" }
jinshu-tracing = { path = "../jinshu-tracing" }
futures = "0.3"
tokio = { version = "~1.16.1", features = ["full"]}
tokio-stream = "0.1"
tokio-util = { version = "0.6", features = ["codec"]}
jinshu-rpc = { path = "../jinshu-rpc" }
tonic = "0.6"
async-trait = "0.1"
config = "0.11"
uuid = "1.0.0-alpha.1"
serde = { version = "1", features = ["derive"]}
dashmap = "5"
deadpool-redis = "0.10"

mime = "0.3"

tracing = "0.1"

anyhow = "1"
serde_json = "1"
time = "0.3"
