[package]
name = "jinshu-common"
version = "0.1.0"
authors = ["Geng Teng <me@gteng.org>"]
description = "Instant Messaging System"
homepage = "https://jinshu.io"
readme = "README.md"
keywords = ["instant messaging"]
license = "MIT"
repository = "https://github.com/gengteng/jinshu"
edition = "2021"

[dependencies]
clap = { version = "3", features = ["derive"]}
serde = { version = "1", features = ["derive"] }
config = "0.11"

thiserror = "1"

[dev-dependencies]
temp-dir = "0.1"
serde_json = "1"
uuid = { version = "1.0.0-alpha.1", features = ["v4"] }
