[package]
name = "jinshu-gateway"
version = "0.1.0"
authors = ["Geng Teng <me@gteng.org>"]
description = "Instant Messaging System"
homepage = "https://jinshu.io"
readme = "README.md"
keywords = ["instant messaging"]
license = "MIT"
repository = "https://github.com/gengteng/jinshu"
edition = "2021"

[dependencies]
jinshu-utils = { path = "../jinshu-utils" }
jinshu-redis = { path = "../jinshu-redis" }
jinshu-database = { path = "../jinshu-database" }
jinshu-common = { path = "../jinshu-common" }
jinshu-tracing = { path = "../jinshu-tracing"}
tokio = { version = "~1.16.1", features = ["full"]}
axum = "0.4"
tower-http = { version = "0.2", features = ["trace"] }
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4", "fast-rng"]}
serde = { version = "1", features = ["derive"]}
anyhow = "1"
tracing = "0.1"
serde_json = "1"
deadpool-redis = "0.10"
sea-orm = { version = "0.6", features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"], default-features = false }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
argon2 = "0.3.2"
url = "2"
serde_repr = "0.1"

[[example]]
name = "app-server"
path = "examples/app_server.rs"