[package]
name = "jinshu-protocol"
version = "0.1.0"
authors = ["Geng Teng <me@gteng.org>"]
description = "Instant Messaging System"
homepage = "https://jinshu.io"
readme = "README.md"
keywords = ["instant messaging"]
license = "MIT"
repository = "https://github.com/gengteng/jinshu"
edition = "2021"

[dependencies]
jinshu-utils = { path = "../jinshu-utils" }
tokio-util = { version = "0.7", features = ["codec"]}
bytes = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"
ciborium = "0.2"
flexbuffers = "2"
url = { version = "2", features = ["serde"] }
uuid = { version = "1.0.0-alpha.1", features = ["serde", "v4", "fast-rng"] }
mime = "0.3"
serde_shims = { version = "0.2", features = ["std", "mime"] }

tracing = "0.1"

thiserror = "1.0"
