[package]
name = "jinshu-storage"
version = "0.1.0"
authors = ["Geng Teng <me@gteng.org>"]
description = "Instant Messaging System"
homepage = "https://jinshu.io"
readme = "README.md"
keywords = ["instant messaging"]
license = "MIT"
repository = "https://github.com/gengteng/jinshu"
edition = "2021"

[dependencies]
jinshu-common = { path = "../jinshu-common" }
jinshu-tracing = { path = "../jinshu-tracing" }
jinshu-queue = { path = "../jinshu-queue" }
jinshu-database = { path = "../jinshu-database" }
jinshu-protocol = { path = "../jinshu-protocol" }
jinshu-utils = { path = "../jinshu-utils" }
async-trait = "0.1"
serde_json = "1.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
sea-orm = { version = "0.6", features = ["sqlx-postgres", "sqlx-mysql", "runtime-tokio-rustls"], default-features = false }
anyhow = "1"
