[package]
name = "jinshu-tracing"
version = "0.1.0"
authors = ["Geng Teng <me@gteng.org>"]
description = "Instant Messaging System"
homepage = "https://jinshu.io"
readme = "README.md"
keywords = ["instant messaging"]
license = "MIT"
repository = "https://github.com/gengteng/jinshu"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
byte-unit = { version = "4.0", features = ["serde"], default-features = false }

tracing = { package = "tracing", version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["json"] }
tracing-appender = "0.2"
rolling-file = "0.1"

thiserror = "1"